--- a/css/contactform.css
+++ b/css/contactform.css
@@ -12,12 +12,13 @@ h1.submitted-data {
     white-space: pre;
 }
 
-form {
+.ContactForm {
     width: 80%;
     background: #8B8B8B;
-    padding: 100px 50px 75px;
+    padding: 30px 30px 30px;
     margin-top: 10%;
     margin-left: 10%;
+    height: 405px;
 }
 
 #display {
@@ -73,16 +74,16 @@ select {
 }
 
 input[type="submit"] {
-    font-size: 110%;
     font-weight: 100;
     background: #5ba9aa;
     border-color: #5ba9aa;
     width: 150px;
-    height: 65px;
+    height: 30px;
     color: #fff;
-    margin-top: 20px;
     cursor: pointer;
     border-radius: 5px;
+    padding-bottom: 20px;
+    padding-top: 6px;
 }
 
 input[type="submit"]:hover {
@@ -96,7 +97,8 @@ textarea {
 
 #coffeegirl {
     width: 73%;
-    margin-top: 10%;
+    margin-top: 5%;
+    padding: 5%
 }
 
 
